--- a/index.html
+++ b/index.html
@@ -5,8 +5,246 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="logo">
+          <img class="logo-image" src="https://via.placeholder.com/154x64" alt="Логотип магазина Глэйси">
+        </a>
+        <ul class="links-block">
+          <li class="links-block__item">
+            <a class="links-block__link" href="/catalog.html">Каталог</a>
+            <ul>
+              <li>Новинки</li>
+              <li>
+                <a href="/catalog.html">Сливочное</a>
+              </li>
+              <li>
+                <a href="/catalog.html">Щербеты</a>
+              </li>
+              <li>
+                <a href="/catalog.html">Фруктовый лед</a>
+              </li>
+              <li>
+                <a href="/catalog.html">Мелорин</a>
+              </li>
+            </ul>
+          </li>
+          <li class="links-block__item">
+            <a class="links-block__link" href="/blank.html">Доставка и оплата</a>
+          </li>
+          <li class="links-block__item">
+            <a class="links-block__link" href="/blank.html">О компании</a>
+          </li>
+        </ul>
+        <ul class="user-block">
+          <li class="user-block__item">
+            <form action="#" method="POST">
+              <input type="search" placeholder="Крем-брюле">
+            </form>
+          </li>
+          <li class="user-block__item">
+            <a class="user-block__link" href="/blank.html">Вход</a>
+            <form action="#" method="POST">
+              <input id="login-login" type="email" name="login" placeholder="email@example.com">
+              <input id="login-password" type="password" name="password" placeholder="••••••••">
+              <button type="submit">Войти</button>
+              <a href="#">Забыли пароль?</a>
+              <a href="#">Новая регистрация</a>
+            </form>
+          </li>
+          <li class="user-block__item">
+            <a class="user-block__link" href="/blank.html">Пусто</a>
+            <div>
+              <table>
+                <tr>
+                  <td>
+                    <img src="https://via.placeholder.com/33x33" alt="">
+                  </td>
+                  <td>Пломбир с апельсиновым джемом</td>
+                  <td>1,5кг х <span>200 руб.</span></td>
+                  <td>300 руб.</td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="https://via.placeholder.com/33x33" alt="">
+                  </td>
+                  <td>Клубничный пломбир с присыпкой из белого шоколада</td>
+                  <td>1,5кг х <span>300 руб.</span></td>
+                  <td>450 руб.</td>
+                </tr>
+              </table>
+              <p>Итого: 750 руб.</p>
+              <button type="submit">Оформить заказ</button>
+            </div>
+          </li>
+        </ul>
+      </nav>
+      <div class="info-block">
+        <p>с 10 до 20, ежедневно</p>
+        <a href="tel:88124502525">8 812 450-25-25</a>
+      </div>
+    </header>
+    <main>
+      <h1>Магазин мороженого "Глейси"</h1>
+      <section class="slider">
+        <input type="radio" name="point" id="slide1">
+        <input type="radio" name="point" id="slide2" checked>
+        <input type="radio" name="point" id="slide3">
+        <div class="slide1">
+          <figure>
+            <img src="https://via.placeholder.com/367x582" alt="Пломбир с помадкой">
+            <img src="https://via.placeholder.com/326x523" alt="клубничный щербет">
+            <figcaption>Пломбир с помадкой и клубничный щербет</figcaption>
+          </figure>
+          <a href="/blank.html">Давайте оба!</a>
+        </div>
+        <div class="slide2">
+          <figure>
+            <img src="https://via.placeholder.com/375x582" alt="Шоколадный пломбир">
+            <img src="https://via.placeholder.com/338x523" alt="Лимонный сорбет">
+            <figcaption>Шоколадный пломбир и лимонный сорбет</figcaption>
+          </figure>
+          <a href="/blank.html">Давайте оба!</a>
+        </div>
+        <div class="slide3">
+          <figure>
+            <img src="https://via.placeholder.com/372x584" alt="Крем-брюле">
+            <img src="https://via.placeholder.com/333x519" alt="Пломбир с малиновым джемом">
+            <figcaption>Крем-брюле и пломбир с малиновым джемом</figcaption>
+          </figure>
+          <a href="/blank.html">Давайте оба!</a>
+        </div>
+      </section>
+      <section class="promotions-block">
+        <h2>Горячие предложения</h2>
+        <div class="promotion">
+          <h3>Малинка даром!</h3>
+          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового
+             варенья бесплатно.</p>
+          <a href="/blank.html">Хочу варенье!</a>
+        </div>
+        <div class="promotion">
+          <h3>Шоколадки даром!</h3>
+          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки
+             совершенно бесплатно.</p>
+          <a href="/blank.html">Хочу шоколадки!</a>
+        </div>
+        <div class="promotion"></div>
+      </section>
+      <section class="icecream-catalog">
+        <h2>Каталог мороженого</h2>
+        <ul>
+          <li class="icecream">
+            <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом">
+            <p>310 &#8381;<span>/кг</span></p>
+            <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+          </li>
+          <li class="icecream">
+            <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное">
+            <p>380 &#8381;<span>/кг</span></p>
+            <h3>Сливочно-кофейное с кусочками шоколада</h3>
+          </li>
+          <li class="icecream">
+            <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное">
+            <p>355 &#8381;<span>/кг</span></p>
+            <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+          </li>
+          <li class="icecream">
+            <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле">
+            <p>415 &#8381;<span>/кг</span></p>
+            <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+          </li>
+        </ul>
+      </section>
+      <section class="features">
+        <h2>Наши преимущества</h2>
+        <h3>Магазин Глэйси - это онлайн  и офлайн-магазин  по продаже мороженого собственного производства
+            на развес</h3>
+        <p class="feature">Все наше мороженое изготавливается на собственном производстве с использованием
+                           современного оборудования и проверенных временем технологий.</p>
+        <p class="feature">Закупка ингредиентов производится только у проверенных фермерских хозяйств и
+                           компаний, с которыми нас связывает долговременное сотрудничество.</p>
+        <p class="feature">Для приготовления мороженого используются настоящие сливки и молоко высочайшего
+                           качества. Все дополнительные ингредиенты и добавки произведены из натурального,
+                           экологически чистого сырья.</p>
+        <p class="feature">Доставка нашего мороженого до заказчика осуществляется в специальном термопаке,
+                           который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+      </section>
+      <section class="blog">
+        <h2>Новости магазина "Глэйси"</h2>
+        <article class="blog-news">
+          <h3>Новое в нашем блоге</h3>
+          <a href="/blank">10 способов сервировки фруктовых щербетов к столу</a>
+        </article>
+        <form class="blog-subscription" action="#">
+          <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит.
+             Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <input type="text" placeholder="email@example.com">
+          <button type="submit">Отправить</button>
+        </form>
+      </section>
+      <section class="map">
+        <h2>Контактная информация</h2>
+        <section>
+          <p>
+            Адрес главного офиса <br>
+            и офлайн магазина:
+            <strong>
+              ул. Большая Конюшенная,<br>
+              19/8, Санкт-Петербург
+            </strong>
+          </p>
+          <p>
+            Для заказов по телефону:<br>
+            <a href="tel:88124502525">8 812 450-25-25</a>
+            (С 10 до 20 ежедневно)
+          </p>
+          <button type="button">Форма обратной связи</button>
+        </section>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <ul>
+        <li>
+          <a href="#"></a>
+        </li>
+        <li>
+          <a href="#"></a>
+        </li>
+        <li>
+          <a href="#"></a>
+        </li>
+        <li>
+          <a href="#"></a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Для поставщиков</a>
+        </li>
+        <li>
+          <a href="#">Наши документы</a>
+        </li>
+        <li>
+          <a href="#">О производстве</a>
+        </li>
+        <li>
+          <a href="#">Экологические стандарты</a>
+        </li>
+      </ul>
+      <div class="copyright">
+        <img src="https://via.placeholder.com/108x39" alt="Логотип HTML Academy">
+        <p>Сделано в HTML Academy &#169; 2019</p>
+      </div>
+    </footer>
+    <section class="callback">
+      <h2>Мы обязательно вам ответим!</h2>
+      <form action="#" method="POST">
+        <input type="text" placeholder="Имя Фамилия">
+        <input type="text" placeholder="email@example.com">
+        <textarea cols="30" rows="10" placeholder="В свободной форме"></textarea>
+        <button type="submit">Отправить</button>
+      </form>
+    </section>
   </body>
 </html>
