Разметка страницы каталога

--- a/blank.html
+++ b/blank.html
@@ -42,7 +42,38 @@
 
     </main>
     <footer class="main-footer">
-
+      <ul>
+        <li>
+          <a href="#"></a>
+        </li>
+        <li>
+          <a href="#"></a>
+        </li>
+        <li>
+          <a href="#"></a>
+        </li>
+        <li>
+          <a href="#"></a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Для поставщиков</a>
+        </li>
+        <li>
+          <a href="#">Наши документы</a>
+        </li>
+        <li>
+          <a href="#">О производстве</a>
+        </li>
+        <li>
+          <a href="#">Экологические стандарты</a>
+        </li>
+      </ul>
+      <div class="copyright">
+        <img src="https://via.placeholder.com/108x39" alt="Логотип HTML Academy">
+        <p>Сделано в HTML Academy &#169; 2019</p>
+      </div>
     </footer>
   </body>
 </html>
