--- a/catalog.html
+++ b/catalog.html
@@ -201,6 +201,26 @@
             <h3>Сливочное с мятным сиропом</h3>
           </li>
         </ul>
+        <ul>
+          <li>
+            <a href="#">1</a>
+          </li>
+          <li>
+            <a href="#">2</a>
+          </li>
+          <li>
+            <a href="#">3</a>
+          </li>
+          <li>
+            <a href="#">4</a>
+          </li>
+          <li>
+            <a href="#">5</a>
+          </li>
+          <li>
+            <a href="#"></a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="main-footer">
