--- a/catalog.html
+++ b/catalog.html
@@ -7,33 +7,33 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="logo" href="/index.html">
+        <a class="logo" href="index.html">
           <img class="logo-image" src="https://via.placeholder.com/154x64" alt="Логотип магазина Глэйси">
         </a>
         <ul class="links-block">
           <li class="links-block__item">
-            <a class="links-block__link" href="/catalog.html">Каталог</a>
+            <a class="links-block__link" href="catalog.html">Каталог</a>
             <ul>
               <li>Новинки</li>
               <li>
-                <a href="/catalog.html">Сливочное</a>
+                <a href="catalog.html">Сливочное</a>
               </li>
               <li>
-                <a href="/catalog.html">Щербеты</a>
+                <a href="catalog.html">Щербеты</a>
               </li>
               <li>
-                <a href="/catalog.html">Фруктовый лед</a>
+                <a href="catalog.html">Фруктовый лед</a>
               </li>
               <li>
-                <a href="/catalog.html">Мелорин</a>
+                <a href="catalog.html">Мелорин</a>
               </li>
             </ul>
           </li>
           <li class="links-block__item">
-            <a class="links-block__link" href="/blank.html">Доставка и оплата</a>
+            <a class="links-block__link" href="blank.html">Доставка и оплата</a>
           </li>
           <li class="links-block__item">
-            <a class="links-block__link" href="/blank.html">О компании</a>
+            <a class="links-block__link" href="blank.html">О компании</a>
           </li>
         </ul>
         <ul class="user-block">
@@ -43,7 +43,7 @@
             </form>
           </li>
           <li class="user-block__item">
-            <a class="user-block__link" href="/blank.html">Вход</a>
+            <a class="user-block__link" href="blank.html">Вход</a>
             <form action="#" method="POST">
               <input id="login-login" type="email" name="login" placeholder="email@example.com">
               <input id="login-password" type="password" name="password" placeholder="••••••••">
@@ -53,7 +53,7 @@
             </form>
           </li>
           <li class="user-block__item">
-            <a class="user-block__link" href="/blank.html">2 товара</a>
+            <a class="user-block__link" href="blank.html">2 товара</a>
             <div>
               <table>
                 <tr>
@@ -87,13 +87,13 @@
     <main>
       <ul>
         <li>
-          <a href="/blank.html">Главная</a>
+          <a href="blank.html">Главная</a>
         </li>
         <li>
-          <a href="/blank.html">Каталог</a>
+          <a href="blank.html">Каталог</a>
         </li>
         <li>
-          <a href="/blank.html">Сливочное</a>
+          <a href="blank.html">Сливочное</a>
         </li>
       </ul>
       <h1>Сливочное мороженое</h1>
