--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
         </a>
         <ul class="links-block">
           <li class="links-block__item">
-            <a class="links-block__link" href="/catalog.html">Каталог</a>
+            <a class="links-block__link" href="catalog.html">Каталог</a>
             <ul>
               <li>Новинки</li>
               <li>
-                <a href="/catalog.html">Сливочное</a>
+                <a href="catalog.html">Сливочное</a>
               </li>
               <li>
-                <a href="/catalog.html">Щербеты</a>
+                <a href="catalog.html">Щербеты</a>
               </li>
               <li>
-                <a href="/catalog.html">Фруктовый лед</a>
+                <a href="catalog.html">Фруктовый лед</a>
               </li>
               <li>
-                <a href="/catalog.html">Мелорин</a>
+                <a href="catalog.html">Мелорин</a>
               </li>
             </ul>
           </li>
           <li class="links-block__item">
-            <a class="links-block__link" href="/blank.html">Доставка и оплата</a>
+            <a class="links-block__link" href="blank.html">Доставка и оплата</a>
           </li>
           <li class="links-block__item">
-            <a class="links-block__link" href="/blank.html">О компании</a>
+            <a class="links-block__link" href="blank.html">О компании</a>
           </li>
         </ul>
         <ul class="user-block">
@@ -43,7 +43,7 @@
             </form>
           </li>
           <li class="user-block__item">
-            <a class="user-block__link" href="/blank.html">Вход</a>
+            <a class="user-block__link" href="blank.html">Вход</a>
             <form action="#" method="POST">
               <input id="login-login" type="email" name="login" placeholder="email@example.com">
               <input id="login-password" type="password" name="password" placeholder="••••••••">
@@ -53,7 +53,7 @@
             </form>
           </li>
           <li class="user-block__item">
-            <a class="user-block__link" href="/blank.html">Пусто</a>
+            <a class="user-block__link" href="blank.html">Пусто</a>
             <div>
               <table>
                 <tr>
@@ -96,7 +96,7 @@
             <img src="https://via.placeholder.com/326x523" alt="клубничный щербет">
             <figcaption>Пломбир с помадкой и клубничный щербет</figcaption>
           </figure>
-          <a href="/blank.html">Давайте оба!</a>
+          <a href="blank.html">Давайте оба!</a>
         </div>
         <div class="slide2">
           <figure>
@@ -104,7 +104,7 @@
             <img src="https://via.placeholder.com/338x523" alt="Лимонный сорбет">
             <figcaption>Шоколадный пломбир и лимонный сорбет</figcaption>
           </figure>
-          <a href="/blank.html">Давайте оба!</a>
+          <a href="blank.html">Давайте оба!</a>
         </div>
         <div class="slide3">
           <figure>
@@ -112,7 +112,7 @@
             <img src="https://via.placeholder.com/333x519" alt="Пломбир с малиновым джемом">
             <figcaption>Крем-брюле и пломбир с малиновым джемом</figcaption>
           </figure>
-          <a href="/blank.html">Давайте оба!</a>
+          <a href="blank.html">Давайте оба!</a>
         </div>
       </section>
       <section class="promotions-block">
@@ -121,13 +121,13 @@
           <h3>Малинка даром!</h3>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового
              варенья бесплатно.</p>
-          <a href="/blank.html">Хочу варенье!</a>
+          <a href="blank.html">Хочу варенье!</a>
         </div>
         <div class="promotion">
           <h3>Шоколадки даром!</h3>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки
              совершенно бесплатно.</p>
-          <a href="/blank.html">Хочу шоколадки!</a>
+          <a href="blank.html">Хочу шоколадки!</a>
         </div>
         <div class="promotion"></div>
       </section>
@@ -174,7 +174,7 @@
         <h2>Новости магазина "Глэйси"</h2>
         <article class="blog-news">
           <h3>Новое в нашем блоге</h3>
-          <a href="/blank">10 способов сервировки фруктовых щербетов к столу</a>
+          <a href="blank">10 способов сервировки фруктовых щербетов к столу</a>
         </article>
         <form class="blog-subscription" action="#">
           <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит.
