Убрал лишние списки

--- a/catalog.html
+++ b/catalog.html
@@ -36,13 +36,13 @@
             <a class="links-block__link" href="blank.html">О компании</a>
           </li>
         </ul>
-        <ul class="user-block">
-          <li class="user-block__item">
+        <div class="user-block">
+          <div class="user-block__item">
             <form action="#" method="POST">
               <input type="search" placeholder="Крем-брюле">
             </form>
-          </li>
-          <li class="user-block__item">
+          </div>
+          <div class="user-block__item">
             <a class="user-block__link" href="blank.html">Вход</a>
             <form action="#" method="POST">
               <input id="login-login" type="email" name="login" placeholder="email@example.com">
@@ -51,8 +51,8 @@
               <a href="#">Забыли пароль?</a>
               <a href="#">Новая регистрация</a>
             </form>
-          </li>
-          <li class="user-block__item">
+          </div>
+          <div class="user-block__item">
             <a class="user-block__link" href="blank.html">2 товара</a>
             <div>
               <table>
@@ -76,8 +76,8 @@
               <p>Итого: 750 руб.</p>
               <button type="submit">Оформить заказ</button>
             </div>
-          </li>
-        </ul>
+          </div>
+        </div>
       </nav>
       <div class="info-block">
         <p>с 10 до 20, ежедневно</p>
@@ -85,17 +85,17 @@
       </div>
     </header>
     <main>
-      <ul>
-        <li>
+      <div>
+        <div>
           <a href="blank.html">Главная</a>
-        </li>
-        <li>
+        </div>
+        <div>
           <a href="blank.html">Каталог</a>
-        </li>
-        <li>
+        </div>
+        <div>
           <a href="blank.html">Сливочное</a>
-        </li>
-      </ul>
+        </div>
+      </div>
       <h1>Сливочное мороженое</h1>
       <form action="#" method="GET">
         <fieldset>
@@ -139,88 +139,88 @@
       </form>
       <section class="icecream-catalog">
         <h2>Каталог мороженого</h2>
-        <ul>
-          <li class="icecream">
+        <div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом">
             <p>310 &#8381;<span>/кг</span></p>
             <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное">
             <p>380 &#8381;<span>/кг</span></p>
             <h3>Сливочно-кофейное с кусочками шоколада</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное">
             <p>355 &#8381;<span>/кг</span></p>
             <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле">
             <p>415 &#8381;<span>/кг</span></p>
             <h3>Сливочное крем-брюле с карамельной подливкой</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное с брусничным джемом">
             <p>325 &#8381;<span>/кг</span></p>
             <h3>Сливочное с брусничным джемом</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное-черничное">
             <p>410 &#8381;<span>/кг</span></p>
             <h3>Сливочно-черничное с цельными ягодами черники</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочно-лимонное">
             <p>315 &#8381;<span>/кг</span></p>
             <h3>Сливочно-лимонное с карамельной присыпкой</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное с шоколадной стружкой">
             <p>320 &#8381;<span>/кг</span></p>
             <h3>Сливочное с шоколадной стружкой</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочно-ванильное">
             <p>440 &#8381;<span>/кг</span></p>
             <h3>Сливочно-ванильное с кусочками шоколада</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное с ментоловым сиропом">
             <p>435 &#8381;<span>/кг</span></p>
             <h3>Сливочное с ментоловым сиропом</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное с черным шоколадом">
             <p>355 &#8381;<span>/кг</span></p>
             <h3>Сливочное с кусочками черного шоколада</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное с мятным сиропом">
             <p>420 &#8381;<span>/кг</span></p>
             <h3>Сливочное с мятным сиропом</h3>
-          </li>
-        </ul>
-        <ul>
-          <li>
+          </div>
+        </div>
+        <div>
+          <div>
             <a href="#">1</a>
-          </li>
-          <li>
+          </div>
+          <div>
             <a href="#">2</a>
-          </li>
-          <li>
+          </div>
+          <div>
             <a href="#">3</a>
-          </li>
-          <li>
+          </div>
+          <div>
             <a href="#">4</a>
-          </li>
-          <li>
+          </div>
+          <div>
             <a href="#">5</a>
-          </li>
-          <li>
+          </div>
+          <div>
             <a href="#"></a>
-          </li>
-        </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="main-footer">
