--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <a class="links-block__link" href="blank.html">О компании</a>
           </li>
         </ul>
-        <ul class="user-block">
-          <li class="user-block__item">
+        <div class="user-block">
+          <div class="user-block__item">
             <form action="#" method="POST">
               <input type="search" placeholder="Крем-брюле">
             </form>
-          </li>
-          <li class="user-block__item">
+          </div>
+          <div class="user-block__item">
             <a class="user-block__link" href="blank.html">Вход</a>
             <form action="#" method="POST">
               <input id="login-login" type="email" name="login" placeholder="email@example.com">
@@ -51,8 +51,8 @@
               <a href="#">Забыли пароль?</a>
               <a href="#">Новая регистрация</a>
             </form>
-          </li>
-          <li class="user-block__item">
+          </div>
+          <div class="user-block__item">
             <a class="user-block__link" href="blank.html">Пусто</a>
             <div>
               <table>
@@ -76,8 +76,8 @@
               <p>Итого: 750 руб.</p>
               <button type="submit">Оформить заказ</button>
             </div>
-          </li>
-        </ul>
+          </div>
+        </div>
       </nav>
       <div class="info-block">
         <p>с 10 до 20, ежедневно</p>
@@ -133,28 +133,28 @@
       </section>
       <section class="icecream-catalog">
         <h2>Каталог мороженого</h2>
-        <ul>
-          <li class="icecream">
+        <div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом">
             <p>310 &#8381;<span>/кг</span></p>
             <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное">
             <p>380 &#8381;<span>/кг</span></p>
             <h3>Сливочно-кофейное с кусочками шоколада</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное">
             <p>355 &#8381;<span>/кг</span></p>
             <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
-          </li>
-          <li class="icecream">
+          </div>
+          <div class="icecream">
             <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле">
             <p>415 &#8381;<span>/кг</span></p>
             <h3>Сливочное крем-брюле с карамельной подливкой</h3>
-          </li>
-        </ul>
+          </div>
+        </div>
       </section>
       <section class="features">
         <h2>Наши преимущества</h2>
