--- a/blank.html
+++ b/blank.html
@@ -7,18 +7,18 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="logo" href="/index.html">
+        <a class="logo" href="index.html">
           <img class="logo-image" src="https://via.placeholder.com/154x64" alt="Логотип магазина Глэйси">
         </a>
         <ul class="links-block">
           <li class="links-block__item">
-            <a class="links-block__link" href="/catalog.html">Каталог</a>
+            <a class="links-block__link" href="catalog.html">Каталог</a>
           </li>
           <li class="links-block__item">
-            <a class="links-block__link" href="/blank.html">Доставка и оплата</a>
+            <a class="links-block__link" href="blank.html">Доставка и оплата</a>
           </li>
           <li class="links-block__item">
-            <a class="links-block__link" href="/blank.html">О компании</a>
+            <a class="links-block__link" href="blank.html">О компании</a>
           </li>
         </ul>
         <ul class="user-block">
@@ -26,10 +26,10 @@
             <input type="search">
           </li>
           <li class="user-block__item">
-            <a class="user-block__link" href="/blank.html">Вход</a>
+            <a class="user-block__link" href="blank.html">Вход</a>
           </li>
           <li class="user-block__item">
-            <a class="user-block__link" href="/blank.html">Пусто</a>
+            <a class="user-block__link" href="blank.html">Пусто</a>
           </li>
         </ul>
       </nav>
