--- a/blank.html
+++ b/blank.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header class="main-header">
       <nav class="main-navigation">
         <a class="logo" href="index.html">
-          <img class="logo-image" src="https://via.placeholder.com/154x64" alt="Логотип магазина Глэйси">
+          <img class="logo-image" src="img/glacy-logo.svg" width="154"  height="64" alt="Логотип магазина Глэйси">
         </a>
         <ul class="links-block">
           <li class="links-block__item">
@@ -71,7 +72,7 @@
         </li>
       </ul>
       <div class="copyright">
-        <img src="https://via.placeholder.com/108x39" alt="Логотип HTML Academy">
+        <img src="img/academy-logo.svg" width="108" height="39" alt="Логотип HTML Academy">
         <p>Сделано в HTML Academy &#169; 2019</p>
       </div>
     </footer>
