--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header class="main-header">
       <nav class="main-navigation">
         <a class="logo" href="index.html">
-          <img class="logo-image" src="https://via.placeholder.com/154x64" alt="Логотип магазина Глэйси">
+          <img class="logo-image" src="img/glacy-logo.svg" width="154"  height="64" alt="Логотип магазина Глэйси">
         </a>
         <ul class="links-block">
           <li class="links-block__item">
@@ -58,7 +59,7 @@
               <table>
                 <tr>
                   <td>
-                    <img src="https://via.placeholder.com/33x33" alt="">
+                    <img src="img/icecream-orange.png" width="33" height="33" alt="Пломбир с апельсиновым джемом">
                   </td>
                   <td>Пломбир с апельсиновым джемом</td>
                   <td>1,5кг х <span>200 руб.</span></td>
@@ -66,7 +67,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <img src="https://via.placeholder.com/33x33" alt="">
+                    <img src="img/icecream-strawberry.png" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
                   </td>
                   <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                   <td>1,5кг х <span>300 руб.</span></td>
@@ -141,62 +142,62 @@
         <h2>Каталог мороженого</h2>
         <div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом">
+            <img src="img/icecream-orange.png" width="267" height="267" alt="Сливочное с апельсиновым джемом">
             <p>310 &#8381;<span>/кг</span></p>
             <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное">
+            <img src="img/icecream-coffee.png" width="267" height="267" alt="Сливочно-кофейное">
             <p>380 &#8381;<span>/кг</span></p>
             <h3>Сливочно-кофейное с кусочками шоколада</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное">
+            <img src="img/icecream-strawberry.png" width="267" height="267" alt="Сливочно-клубничное">
             <p>355 &#8381;<span>/кг</span></p>
             <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле">
+            <img src="img/icecream-cremebrulee.png" width="267" height="267" alt="Сливочное крем-брюле">
             <p>415 &#8381;<span>/кг</span></p>
             <h3>Сливочное крем-брюле с карамельной подливкой</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное с брусничным джемом">
+            <img src="img/icecream-lingonberry.png" width="267" height="267" alt="Сливочное с брусничным джемом">
             <p>325 &#8381;<span>/кг</span></p>
             <h3>Сливочное с брусничным джемом</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное-черничное">
+            <img src="img/icecream-blueberry.png" width="267" height="267" alt="Сливочное-черничное">
             <p>410 &#8381;<span>/кг</span></p>
             <h3>Сливочно-черничное с цельными ягодами черники</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочно-лимонное">
+            <img src="img/icecream-caramel.png" width="267" height="267" alt="Сливочно-лимонное">
             <p>315 &#8381;<span>/кг</span></p>
             <h3>Сливочно-лимонное с карамельной присыпкой</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное с шоколадной стружкой">
+            <img src="img/icecream-chocolate-chip.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
             <p>320 &#8381;<span>/кг</span></p>
             <h3>Сливочное с шоколадной стружкой</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочно-ванильное">
+            <img src="img/icecream-vanile.png" width="267" height="267" alt="Сливочно-ванильное">
             <p>440 &#8381;<span>/кг</span></p>
             <h3>Сливочно-ванильное с кусочками шоколада</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное с ментоловым сиропом">
+            <img src="img/icecream-mentol.png" width="267" height="267" alt="Сливочное с ментоловым сиропом">
             <p>435 &#8381;<span>/кг</span></p>
             <h3>Сливочное с ментоловым сиропом</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное с черным шоколадом">
+            <img src="img/icecream-chocolate-piece.png" width="267" height="267" alt="Сливочное с черным шоколадом">
             <p>355 &#8381;<span>/кг</span></p>
             <h3>Сливочное с кусочками черного шоколада</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное с мятным сиропом">
+            <img src="img/icecream-mint.png" width="267" height="267" alt="Сливочное с мятным сиропом">
             <p>420 &#8381;<span>/кг</span></p>
             <h3>Сливочное с мятным сиропом</h3>
           </div>
@@ -253,7 +254,7 @@
         </li>
       </ul>
       <div class="copyright">
-        <img src="https://via.placeholder.com/108x39" alt="Логотип HTML Academy">
+        <img src="img/academy-logo.svg" width="108" height="39" alt="Логотип HTML Academy">
         <p>Сделано в HTML Academy &#169; 2019</p>
       </div>
     </footer>
