--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header class="main-header">
       <nav class="main-navigation">
         <a class="logo">
-          <img class="logo-image" src="https://via.placeholder.com/154x64" alt="Логотип магазина Глэйси">
+          <img class="logo-image" src="img/glacy-logo.svg" width="154"  height="64" alt="Логотип магазина Глэйси">
         </a>
         <ul class="links-block">
           <li class="links-block__item">
@@ -58,7 +59,7 @@
               <table>
                 <tr>
                   <td>
-                    <img src="https://via.placeholder.com/33x33" alt="">
+                    <img src="img/icecream-orange.png" width="33" height="33" alt="Пломбир с апельсиновым джемом">
                   </td>
                   <td>Пломбир с апельсиновым джемом</td>
                   <td>1,5кг х <span>200 руб.</span></td>
@@ -66,7 +67,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <img src="https://via.placeholder.com/33x33" alt="">
+                    <img src="img/icecream-strawberry.png" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
                   </td>
                   <td>Клубничный пломбир с присыпкой из белого шоколада</td>
                   <td>1,5кг х <span>300 руб.</span></td>
@@ -92,24 +93,24 @@
         <input type="radio" name="point" id="slide3">
         <div class="slide1">
           <figure>
-            <img src="https://via.placeholder.com/367x582" alt="Пломбир с помадкой">
-            <img src="https://via.placeholder.com/326x523" alt="клубничный щербет">
+            <img src="img/plombir-pomade-slider.png" width="367" height="582" alt="Пломбир с помадкой">
+            <img src="img/strawberry-sorbet-slider.png" width="326" height="523" alt="клубничный щербет">
             <figcaption>Пломбир с помадкой и клубничный щербет</figcaption>
           </figure>
           <a href="blank.html">Давайте оба!</a>
         </div>
         <div class="slide2">
           <figure>
-            <img src="https://via.placeholder.com/375x582" alt="Шоколадный пломбир">
-            <img src="https://via.placeholder.com/338x523" alt="Лимонный сорбет">
+            <img src="img/chocolate-plombir-slider.png" width="375" height="582" alt="Шоколадный пломбир">
+            <img src="img/lemon-sorbet-slider.png" width="338" height="523" alt="Лимонный сорбет">
             <figcaption>Шоколадный пломбир и лимонный сорбет</figcaption>
           </figure>
           <a href="blank.html">Давайте оба!</a>
         </div>
         <div class="slide3">
           <figure>
-            <img src="https://via.placeholder.com/372x584" alt="Крем-брюле">
-            <img src="https://via.placeholder.com/333x519" alt="Пломбир с малиновым джемом">
+            <img src="img/ creme-brulee-slider.png" width="372" height="584" alt="Крем-брюле">
+            <img src="img/raspberry-plombir-slider.png" width="333" height="519" alt="Пломбир с малиновым джемом">
             <figcaption>Крем-брюле и пломбир с малиновым джемом</figcaption>
           </figure>
           <a href="blank.html">Давайте оба!</a>
@@ -135,22 +136,22 @@
         <h2>Каталог мороженого</h2>
         <div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное с апельсиновым джемом">
+            <img src="img/icecream-orange.png" width="267" height="267" alt="Сливочное с апельсиновым джемом">
             <p>310 &#8381;<span>/кг</span></p>
             <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочно-кофейное">
+            <img src="img/icecream-coffee.png" width="267" height="267" alt="Сливочно-кофейное">
             <p>380 &#8381;<span>/кг</span></p>
             <h3>Сливочно-кофейное с кусочками шоколада</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочно-клубничное">
+            <img src="img/icecream-strawberry.png" width="267" height="267" alt="Сливочно-клубничное">
             <p>355 &#8381;<span>/кг</span></p>
             <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
           </div>
           <div class="icecream">
-            <img src="https://via.placeholder.com/267x267" alt="Сливочное крем-брюле">
+            <img src="img/icecream-cremebrulee.png" width="267" height="267" alt="Сливочное крем-брюле">
             <p>415 &#8381;<span>/кг</span></p>
             <h3>Сливочное крем-брюле с карамельной подливкой</h3>
           </div>
@@ -233,7 +234,7 @@
         </li>
       </ul>
       <div class="copyright">
-        <img src="https://via.placeholder.com/108x39" alt="Логотип HTML Academy">
+        <img src="img/academy-logo.svg" width="108" height="39" alt="Логотип HTML Academy">
         <p>Сделано в HTML Academy &#169; 2019</p>
       </div>
     </footer>
