--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="img/favicon/favicon-180.png">
     <link rel="manifest" href="manifest.webmanifest">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page-body bg-slider-green">
 
@@ -61,7 +61,7 @@
           <!-- search -->
           <li class="user-item">
 
-            <a class="search-link" class="search-link" href="#" aria-label="Поиск">
+            <a class="search-link" href="#" aria-label="Поиск">
               <svg class="search-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M16 14.6652L11.0785 9.73294C11.9827 8.48188 12.3826 6.93501 12.1984 5.40134C12.0141 3.86767 11.2594 2.4601 10.0848 1.45982C8.91022 0.45954 7.40233 -0.0598191 5.86234 0.00548954C4.32234 0.0707982 2.86363 0.715967 1.77757 1.81212C0.691516 2.90827 0.0580813 4.3747 0.0038002 5.91849C-0.050481 7.46228 0.478388 8.96976 1.48476 10.1398C2.49113 11.3098 3.90092 12.0563 5.43251 12.2301C6.96409 12.4039 8.50472 11.9922 9.74663 11.0772L14.6586 16L16 14.6652ZM6.08152 10.3767C5.24079 10.3767 4.41895 10.1268 3.71991 9.65874C3.02087 9.19063 2.47604 8.5253 2.15431 7.74687C1.83258 6.96844 1.7484 6.11188 1.91241 5.28551C2.07643 4.45913 2.48128 3.70006 3.07576 3.10427C3.67024 2.50849 4.42766 2.10276 5.25223 1.93838C6.0768 1.77401 6.93149 1.85837 7.70822 2.1808C8.48495 2.50324 9.14883 3.04927 9.61591 3.74983C10.083 4.4504 10.3323 5.27404 10.3323 6.11661C10.3298 7.24568 9.88115 8.3278 9.08451 9.12618C8.28788 9.92456 7.20813 10.3742 6.08152 10.3767Z" fill="white"/>
               </svg>
@@ -85,7 +85,9 @@
             </a>
 
             <form class="login popup" action="#" method="POST">
-              <input id="login-login" type="email" name="login" placeholder="email@example.com">
+              <label class="visually-hidden" for="login-email">Введите e-mail</label>
+              <input id="login-email" type="email" name="login" placeholder="email@example.com">
+              <label class="visually-hidden" for="login-password">Введите пароль</label>
               <input id="login-password" type="password" name="password" placeholder="••••••••">
               <button class="btn btn-login" type="submit">Войти</button>
               <div class="login-links">
@@ -162,9 +164,9 @@
         </ul>
 
         <div class="slider-controls">
-          <button class="btn-controls" type="button" aria-label="Первый слайд"></button>
-          <button class="btn-controls" type="button" aria-label="Второй слайд"></button>
-          <button class="current" type="button" aria-label="Третий слайд"></button>
+          <button class="btn-controls" type="button" data-color="brown" aria-label="Первый слайд"></button>
+          <button class="btn-controls" type="button" data-color="blue" aria-label="Второй слайд"></button>
+          <button class="current" type="button" data-color="green" aria-label="Третий слайд"></button>
         </div>
       </section>
 
@@ -252,7 +254,8 @@
         <form class="blog-subscription" action="#">
           <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит.
              Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-          <input type="text" placeholder="email@example.com">
+          <label class="visually-hidden" for="subscription-email">Введите e-mail</label>
+          <input id="subscription-email" type="text" placeholder="email@example.com">
           <button class="btn btn-blog" type="submit">Отправить</button>
         </form>
 
@@ -260,6 +263,10 @@
 
       <!-- MAP -->
       <section class="map">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A77f2c702da453874a0767ae967fa214e9f26b62830f54775108ee4b9b10a15d4&amp;source=constructor"
+                width="1200" height="430" tabindex="0"
+                title="Офис компании по адресу ул. Большая Конюшенная, 19/8, Санкт-Петербург">
+        </iframe>
         <h2 class="visually-hidden">Контактная информация</h2>
         <section class="reach-form">
           <h3 class="visually-hidden">Контактная информация</h3>
@@ -278,9 +285,15 @@
           </p>
           <button class="btn btn-reach" type="button">Форма обратной связи</button>
         </section>
+
       </section>
+
     </main>
+
+    <!-- FOOTER -->
     <footer class="main-footer container">
+
+      <!-- social -->
       <ul class="footer-social">
         <li>
           <a href="#">
@@ -320,6 +333,8 @@
           </a>
         </li>
       </ul>
+
+      <!-- footer links -->
       <ul class="footer-links">
         <li>
           <a class="supplyers-link" href="#">Для поставщиков</a>
@@ -340,16 +355,23 @@
         </a>
         <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2019</p>
       </div>
+
     </footer>
+
+    <!-- MODAL -->
     <section class="callback">
       <form class="modal popup" action="#" method="POST">
         <h2>Мы обязательно вам ответим!</h2>
-        <input type="text" placeholder="Имя Фамилия">
-        <input type="text" placeholder="email@example.com">
-        <textarea placeholder="В свободной форме"></textarea>
+        <label class="visually-hidden" for="callback-name">Введите имя</label>
+        <input id="callback-name" type="text" placeholder="Имя Фамилия">
+        <label class="visually-hidden" for="callback-email">Введите e-mail</label>
+        <input id="callback-email" type="text" placeholder="email@example.com">
+        <label class="visually-hidden" for="callback-about">Введите ваш вопрос</label>
+        <textarea id="callback-about" placeholder="В свободной форме"></textarea>
         <button class="btn btn-modal" type="submit">Отправить</button>
         <button class="close" type="button" aria-label="Закрыть"></button>
       </form>
     </section>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
